app/styles/app.scss
// Copyright(c) 2016 Xuanrui Qi
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

@import 'variables';
@import 'bootstrap';
@import 'bootswatch';

html {
  position: relative;
  min-height: 100%;
}

body {
    padding-top: 70px;
    margin-bottom: 70px;
}

img {
    display:block;
    margin-left: auto;
    margin-right: auto;
    width: 60%;
    height: 60%;
}

figcaption {
  text-align: center;
  font-size: 90%;
}

#credits {
    width: 100%;
}

.footer {
    height: 70px;
    position: absolute;
    bottom: 0;
    width: 100%;
}

.title {
    text-align: center;
}

.right-box {
    position: absolute;
    right: 100px;
    top: 80px;
    border: 1px solid;
}

#lang-box {
    margin: 5px;
}

